--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,12 +6,19 @@
   .bg-white-rounded {
     @apply bg-white bg-opacity-20 rounded-2xl;
   }
+  .degree {
+    @apply after:content-["°"] after:absolute;
+  }
+  .blue-bg {
+    background: linear-gradient(159.02deg, #2f52a6 -2.61%, #4782c9 104.66%);
+  }
 }
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: Outfit;
+  overflow-x: hidden;
 }
 
 a {
@@ -21,4 +28,14 @@ a {
 
 * {
   box-sizing: border-box;
+}
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
